--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Tilt Protorype</title>
-  <script src="js/face-api.js"></script>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>Tilt Face Tracker</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div class="container">
+  <video class="preview" id="videoel" width="400" height="300" preload="auto" loop="" playsinline="" autoplay="">
+  </video>
+  <canvas class="preview" id="overlay" width="400" height="300"></canvas>
+  <div class="text" onclick="changeFont()">Quick</div>
+  <div class="dot"></div>
+</div>
+
+<script src="js/utils.js"></script>
+<script src="js/clmtrackr.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
