--- a/prototypes/facetracker/index.html
+++ b/prototypes/facetracker/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Tilt Face Tracker</title>
+  <title>Tilt: Face Tracker</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
