--- a/prototypes/scroll-cursor/index.html
+++ b/prototypes/scroll-cursor/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Tilt Draggable</title>
+  <title>Tilt: Scroll Cursor</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
