minor updates to prototype

--- a/prototypes/chinatown-altogether/index.html
+++ b/prototypes/chinatown-altogether/index.html
@@ -34,7 +34,7 @@
   </div>
   <div class="box" style="width: 560px; height: 200px; border-bottom: 1px solid; border-right: 1px solid; left: 690px;">
     Wonton Garden<br>
-    Vegan Dim Dum
+    Vegan Dim Sum
   </div>
   <div class="box" style="width: 560px; height: 65px; border-bottom: 1px solid; border-right: 1px solid; left: 690px; top: 200px; font-size: 36px; padding-top:15px;">
     FRUIT & VEGETABLE SUPPLY, INC
