added camera icons

--- a/prototypes/chinatown-altogether/index.html
+++ b/prototypes/chinatown-altogether/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Tilt: Chinatown</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -26,8 +27,9 @@
     47A Mott St.
   </div>
   <div class="box" style="width: 560px; height: 110px; border-bottom: 1px solid; border-right: 1px solid; top: 805px; font-size: 36px; text-align: left;">
-    TODAY<br>
-    MORTGAGE
+    <i class="material-icons" style="position: absolute; font-size: 72px; left: 460px;">camera_enhance</i>
+    TRACK-YOUR-FACE<br>
+    TEST SUITE
   </div>
   <div class="box" style="width: 130px; height: 530px; border-bottom: 1px solid; border-right: 1px solid; left: 560px;">
     H<br>O<br>P<br>K<br>E<br>E
