sections: header, scroller, information

--- a/prototypes/header/index.html
+++ b/prototypes/header/index.html
@@ -19,7 +19,10 @@
     <li>☺</li>
   </ul>
 </nav>
-<div class="text" onclick="setText()">MMM</div>
+<!-- <div class="text" onclick="setText()">NPW</div> -->
+<div class="text" onclick="setText()">
+  <span class="char-0">N</span><span class="char-1">P</span><span class="char-2">W</span>
+</div>
 <div class="hrot">Horizontal Rotation: <span class="hrot_val"></span></div>
 <div class="vrot">Vertical Rotation: <span class="vrot_val"></span></div>
 <svg height="100vh" width="100vw">
