--- a/index.html
+++ b/index.html
@@ -56,5 +56,21 @@
       <div class="glyph">N</div>
     </div>
   </section>
+  <section class="tester neon clearfix">
+    <div class="ibeam">
+      <img src="assets/ibeam.svg">
+    </div>
+    <div class="text">
+      <div class="slider-wrapper hrot">
+        <span>HROT</span>
+        <input class="slider" type="range" min="-45" max="45" value="0">
+      </div>
+      <div class="slider-wrapper vrot">
+        <span>VROT</span>
+        <input class="slider" type="range" min="-45" max="45" value="0">
+      </div>
+      <input class="string neon" type="text" value="AaBbCcDdEeFfGgHhIiJjKkLlMmOoPpQqRrSsTtUuVvWwXxYyZz"></input>
+    </div>
+  </section>
 </body>
 </html>
