sections: structure for signs

--- a/index.html
+++ b/index.html
@@ -40,6 +40,87 @@
 
   <div class="separator"></div>
   
+  <section class="signs neon clearfix">
+    <div class="col-half">
+      <div class="nha-hang-tan-the-gioi">
+        <span class="content">
+          <span class="inner">
+            Nhà Hàng Tân Thế Giới
+          </span>
+        </span>
+      </div>
+      <div class="col-half">
+        <div class="new-york-boston">
+          <span class="content">
+            <span class="inner">
+              NY-Boston
+            </span>
+          </span>
+        </div>
+        <div class="col-quarter">
+          <div class="twenty-four-hrs">
+            <span class="content">
+              <span class="inner">
+                24 Hrs
+              </span>
+            </span>
+          </div>
+          <div class="back-rub">
+            <span class="content">
+              <span class="inner">
+                Back Rub
+              </span>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-half">
+      <div class="prosperity">
+        <span class="content">
+          <span class="inner">
+            prosperity
+          </span>
+        </span>
+      </div>
+      <div class="col-hopkee">
+        <div class="hopkee">
+          <span class="content">
+            <span class="inner">
+              hopkee
+            </span>
+          </span>
+        </div>
+      </div>
+      <div class="col-hok-shan">
+        <div class="col-hok-shan-top">
+          <div class="col-key">
+            <div class="key">
+              <span class="content">
+                <span class="inner">
+                  🔑
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="four-choices">
+            <span class="content">
+              <span class="inner">
+                $4
+              </span>
+            </span>
+          </div>
+        </div>
+        <div class="hok-shan-building">
+          <span class="content">
+            <span class="inner">
+              hok-shan-building
+            </span>
+          </span>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="information neon clearfix">
     <div class="description">
       <h2>Tilt — Neon</h2>
@@ -77,6 +158,86 @@
   
   <div class="separator"></div>
 
+  <section class="signs prism clearfix">
+    <div class="grand-central">
+      <span class="content">
+        <span class="inner">
+          gct
+        </span>
+      </span>
+    </div>
+    <div class="thirty">
+      <span class="content">
+        <span class="inner">
+          30
+        </span>
+      </span>
+    </div>
+    <div class="pershing">
+      <span class="content">
+        <span class="inner">
+          pershing
+        </span>
+      </span>
+    </div>
+    <div class="col-half">
+      <div class="col-half">
+        <div class="time">
+          <span class="content">
+            <span class="inner">
+              time
+            </span>
+          </span>
+        </div>
+        <div class="trk">
+          <span class="content">
+            <span class="inner">
+              trk
+            </span>
+          </span>
+        </div>
+      </div>
+      <div class="bowery-savings">
+        <span class="content">
+          <span class="inner">
+            bowery savings
+          </span>
+        </span>
+      </div>
+    </div>
+    <div class="col-half">
+      <div class="nypl">
+        <span class="content">
+          <span class="inner">
+            nypl
+          </span>
+        </span>
+      </div>
+      <div class="restroom">
+        <span class="content">
+          <span class="inner">
+            women - men
+          </span>
+        </span>
+      </div>
+      <div class="half">
+        <div class="fourty-second">
+          <span class="content">
+            <span class="inner">
+              42nd
+            </span>
+          </span>
+        </div>
+        <div class="east">
+          <span class="content">
+            <span class="inner">
+              East
+            </span>
+          </span>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="information neon clearfix">
     <div class="description">
       <h2>Tilt — Prism</h2>
@@ -114,6 +275,93 @@
 
   <div class="separator"></div>
 
+  <section class="signs warp clearfix">
+    <div class="col-half">
+      <div class="dont-block">
+        <span class="content">
+          <span class="inner">
+            dont-block
+          </span>
+        </span>
+      </div>
+      <div class="holland-tunnel">
+        <span class="content">
+          <span class="inner">
+            holland tunnel
+          </span>
+        </span>
+      </div>
+      <div class="col-half">
+        <div class="parking-tax">
+          <span class="content">
+            <span class="inner">
+              parking tax
+            </span>
+          </span>
+        </div>
+        <div class="metered-parking">
+          <span class="content">
+            <span class="inner">
+              3 hour
+            </span>
+          </span>
+        </div>
+      </div>
+    </div>
+    <div class="col-max-veh">
+      <div class="bus">
+        <span class="content">
+          <span class="inner">
+            m101
+          </span>
+        </span>
+      </div>
+      <div class="bus">
+        <span class="content">
+          <span class="inner">
+            m102
+          </span>
+        </span>
+      </div>
+      <div class="bus">
+        <span class="content">
+          <span class="inner">
+            m103
+          </span>
+        </span>
+      </div>
+      <div class="fraction">
+        <span class="content">
+          <span class="inner">
+            ½
+          </span>
+        </span>
+      </div>
+      <div class="max-veh">
+        <span class="content">
+          <span class="inner">
+            max veh
+          </span>
+        </span>
+      </div>
+    </div>
+    <div class="col-early-bird">
+      <div class="thru-traffic">
+        <span class="content">
+          <span class="inner">
+            thru-traffic
+          </span>
+        </span>
+      </div>
+      <div class="early-bird">
+        <span class="content">
+          <span class="inner">
+            early bird
+          </span>
+        </span>
+      </div>
+    </div>
+  </section>
   <section class="information neon clearfix">
     <div class="description">
       <h2>Tilt — Warp</h2>
