initial pass at signs

--- a/index.html
+++ b/index.html
@@ -42,80 +42,76 @@
   
   <section class="signs neon clearfix">
     <div class="col-half">
-      <div class="nha-hang-tan-the-gioi">
-        <span class="content">
-          <span class="inner">
-            Nhà Hàng Tân Thế Giới
-          </span>
-        </span>
+      <div class="nha-hang-tan-the-gioi sign">
+        <div class="inner">
+          <p class="l">Nhà Hàng <br>Tân Thế Giới</p>
+          <div class="oval"><p class="l">220</p></div>
+          <p class="xs">ĐẶC BIỆT NHÂN HEO <br>SỮA VÀ HEO CÚNG LỄ</p>
+        </div>
       </div>
       <div class="col-half">
-        <div class="new-york-boston">
-          <span class="content">
+        <div class="new-york-boston sign">
             <span class="inner">
-              NY-Boston
+              <p class="s">New York</p>
+              <p class="s">←→</p>
+              <p class="s">Boston</p>
             </span>
           </span>
         </div>
         <div class="col-quarter">
-          <div class="twenty-four-hrs">
-            <span class="content">
-              <span class="inner">
-                24 Hrs
-              </span>
+          <div class="twenty-four-hrs sign">
+            <span class="inner">
+              <p class="m">24HRS</p>
             </span>
           </div>
-          <div class="back-rub">
-            <span class="content">
-              <span class="inner">
-                Back Rub
-              </span>
+          <div class="back-rub sign">
+            <span class="inner">
+              <p class="xs">BACK <br>RUB</p>
+              <p class="xs heart">♡</p>
+              <p class="xs">FOOT <br>RUB</p>
             </span>
           </div>
         </div>
       </div>
     </div>
     <div class="col-half">
-      <div class="prosperity">
-        <span class="content">
-          <span class="inner">
-            prosperity
-          </span>
+      <div class="prosperity sign">
+        <span class="inner">
+          <p class="xs">PROSPERITY</p>
+          <p class="xs">DUMPLING</p>
+        </span>
         </span>
       </div>
       <div class="col-hopkee">
-        <div class="hopkee">
-          <span class="content">
-            <span class="inner">
-              hopkee
-            </span>
+        <div class="hopkee sign">
+          <span class="inner">
+            <p class="l">HOPKEE</p>
           </span>
         </div>
       </div>
       <div class="col-hok-shan">
         <div class="col-hok-shan-top">
           <div class="col-key">
-            <div class="key">
-              <span class="content">
-                <span class="inner">
-                  🔑
-                </span>
+            <div class="key sign">
+              <span class="inner">
+                <p class="xxl">🔑</p>
               </span>
             </div>
           </div>
-          <div class="four-choices">
-            <span class="content">
-              <span class="inner">
-                $4
-              </span>
+          <div class="four-choices sign">
+            <span class="inner">
+              <p class="xl dollar">$4</p>
+              <p class="xs">FOUR CHOICES WITH A SOUP</p>
             </span>
           </div>
         </div>
-        <div class="hok-shan-building">
-          <span class="content">
-            <span class="inner">
-              hok-shan-building
-            </span>
+        <div class="hok-shan-building sign">
+          <span class="inner">
+            <p class="l">HOK SHAN <br>BUILDING</p>
+            <div class="circle">
+              <p class="m">42</p>
+              <p class="m">44</p>
+            </div>
           </span>
         </div>
       </div>
@@ -159,80 +155,62 @@
   <div class="separator"></div>
 
   <section class="signs prism clearfix">
-    <div class="grand-central">
-      <span class="content">
-        <span class="inner">
-          gct
-        </span>
+    <div class="grand-central sign">
+      <span class="inner">
+        <p class="l">GRAND CENTRAL <br>TERMINAL</p>
       </span>
     </div>
-    <div class="thirty">
-      <span class="content">
-        <span class="inner">
-          30
-        </span>
+    <div class="thirty sign">
+      <span class="inner">
+        <!-- <p class="m track">TRK</p> -->
+        <p class="xxxl num">30</p>
       </span>
     </div>
-    <div class="pershing">
-      <span class="content">
-        <span class="inner">
-          pershing
-        </span>
+    <div class="pershing sign">
+      <span class="inner">
+        <p class="l">- Pershing Square -</p>
       </span>
     </div>
     <div class="col-half">
       <div class="col-half">
-        <div class="time">
-          <span class="content">
-            <span class="inner">
-              time
-            </span>
+        <div class="time sign">
+          <span class="inner">
+            <p class="l">TIME</p>
           </span>
         </div>
-        <div class="trk">
-          <span class="content">
-            <span class="inner">
-              trk
-            </span>
+        <div class="trk sign">
+          <span class="inner">
+            <p class="l">TRK</p>
           </span>
         </div>
       </div>
-      <div class="bowery-savings">
-        <span class="content">
-          <span class="inner">
-            bowery savings
-          </span>
+      <div class="bowery-savings sign">
+        <span class="inner">
+          <!-- <p class="m">THE BOWERY SAVINGS BANK</p> -->
+          <p class="m save">TO <br>SERVE <br>THOSE WHO <br>SAVE</p>
         </span>
       </div>
     </div>
     <div class="col-half">
-      <div class="nypl">
-        <span class="content">
-          <span class="inner">
-            nypl
-          </span>
+      <div class="nypl sign">
+        <span class="inner">
+          <p class="m text">THE NEW YORK <br>PUBLIC LIBRARY <br>MDCCCCII</p>
         </span>
       </div>
-      <div class="restroom">
-        <span class="content">
-          <span class="inner">
-            women - men
-          </span>
+      <div class="restroom sign">
+        <span class="inner">
+          <p class="m">WOMEN&nbsp; &nbsp;·&nbsp; &nbsp;MEN</p>
         </span>
       </div>
       <div class="half">
-        <div class="fourty-second">
-          <span class="content">
-            <span class="inner">
-              42nd
-            </span>
+        <div class="fourty-second sign">
+          <span class="inner">
+            <p class="l">42nd</p>
           </span>
         </div>
-        <div class="east">
-          <span class="content">
-            <span class="inner">
-              East
-            </span>
+        <div class="east sign">
+          <span class="inner">
+            <p class="l">East</p>
           </span>
         </div>
       </div>
@@ -277,87 +255,73 @@
 
   <section class="signs warp clearfix">
     <div class="col-half">
-      <div class="dont-block">
-        <span class="content">
-          <span class="inner">
-            dont-block
-          </span>
+      <div class="dont-block sign">
+        <span class="inner">
+          <p class="l">DON'T BLOCK <br>THE BOX</p>
+          <div class="box"></div>
         </span>
       </div>
-      <div class="holland-tunnel">
-        <span class="content">
-          <span class="inner">
-            holland tunnel
-          </span>
+      <div class="holland-tunnel sign">
+        <span class="inner">
+          <p class="l text">HOLLAND TUNNEL</p>
         </span>
       </div>
       <div class="col-half">
-        <div class="parking-tax">
-          <span class="content">
-            <span class="inner">
-              parking tax
-            </span>
+        <div class="parking-tax sign">
+          <span class="inner">
+            <p class="xs">18.375% NYC <br>Parking Tax <br>Add’l</p>
           </span>
         </div>
-        <div class="metered-parking">
-          <span class="content">
-            <span class="inner">
-              3 hour
-            </span>
+        <div class="metered-parking sign">
+          <span class="inner">
+            <p class="xl">3</p>
+            <p class="xxs text">hour <br>metered <br>parking</p>
           </span>
         </div>
       </div>
     </div>
-    <div class="col-max-veh">
-      <div class="bus">
-        <span class="content">
-          <span class="inner">
-            m101
-          </span>
+    <div class="col-max-veh sign">
+      <div class="bus sign">
+        <span class="inner">
+          <p class="m">M101</p>
         </span>
       </div>
-      <div class="bus">
-        <span class="content">
-          <span class="inner">
-            m102
-          </span>
+      <div class="bus sign">
+        <span class="inner">
+          <p class="m">M102</p>
         </span>
       </div>
-      <div class="bus">
-        <span class="content">
-          <span class="inner">
-            m103
-          </span>
+      <div class="bus sign">
+        <span class="inner">
+          <p class="m">M103</p>
         </span>
       </div>
-      <div class="fraction">
-        <span class="content">
-          <span class="inner">
-            ½
-          </span>
+      <div class="fraction sign">
+        <span class="inner">
+          <p class="xxl">½</p>
         </span>
       </div>
-      <div class="max-veh">
-        <span class="content">
-          <span class="inner">
-            max veh
-          </span>
+      <div class="max-veh sign">
+        <span class="inner">
+          <p class="m max">MAX <br>VEH <br>HGT</p>
+          <div class="size">
+            <p class="s">12'6"</p>
+          </div>
         </span>
       </div>
     </div>
     <div class="col-early-bird">
-      <div class="thru-traffic">
-        <span class="content">
-          <span class="inner">
-            thru-traffic
-          </span>
+      <div class="thru-traffic sign">
+        <span class="inner">
+          <p class="s">THRU TRAFFIC <br>Lower <br>Manhattan</p>
+          <div class="only">
+            <p class="s">ONLY</p>
+          </div>
         </span>
       </div>
-      <div class="early-bird">
-        <span class="content">
-          <span class="inner">
-            early bird
-          </span>
+      <div class="early-bird sign">
+        <span class="inner">
+          <p class="l">EARLY <br>BIRD <br>SPECIAL <br>MON. <br>TO <br>FRI.</p>
         </span>
       </div>
     </div>
