minor css tweaks

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <div class="col-half">
       <div class="nha-hang-tan-the-gioi sign">
         <div class="inner">
-          <div class="oval"><p class="xl">220</p></div>
           <p class="l">Nhà Hàng <br>Tân Thế Giới</p>
-          <!-- <p class="xs">ĐẶC BIỆT NHÂN HEO <br>SỮA VÀ HEO CÚNG LỄ</p> -->
+          <div class="oval"><p class="xl">220</p></div>
+          <!-- <p class="xxs">ĐẶC BIỆT NHÂN HEO SỮA VÀ HEO CÚNG LỄ</p> -->
         </div>
       </div>
       <div class="col-half">
@@ -85,7 +85,7 @@
       <div class="col-hopkee">
         <div class="hopkee sign">
           <span class="inner">
-            <p class="l">HOPKEE</p>
+            <p class="l">H<br>O<br>P<br>K<br>E<br>E</p>
           </span>
         </div>
       </div>
@@ -282,6 +282,7 @@
         <span class="inner">
           <p class="l">DON’T BLOCK <br>THE BOX</p>
           <svg class="box">
+            <rect width="100%" height="100%"/>
             <line x1="0" y1="0" x2="100%" y2="100%"/>
             <line x1="0" y1="100%" x2="100%" y2="0"/>
           </svg>
