glyphs table setting

--- a/index.html
+++ b/index.html
@@ -135,6 +135,128 @@
       <div class="glyph neon">N</div>
     </div>
   </section>
+  <section class="glyphs-table">
+    <ul>
+      <li><p class="glyph">!</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">“</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">#</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">$</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">%</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">&</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">‘</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">(</p><p class="glyph-name">exclam</p></li>
+    </ul>
+    <ul>
+      <li><p class="glyph">)</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">*</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">+</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">,</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">-</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">,</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">/</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">@</p><p class="glyph-name">exclam</p></li>
+    </ul>
+    <ul>
+      <li><p class="glyph">1</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">2</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">3</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">4</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">5</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">6</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">7</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">8</p><p class="glyph-name">exclam</p></li>
+    </ul>
+    <ul>
+      <li><p class="glyph">9</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">0</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">:</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">;</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph"><</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">></p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">=</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">^</p><p class="glyph-name">exclam</p></li>
+    </ul>
+    <ul>
+      <li><p class="glyph">A</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">B</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">C</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">D</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">E</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">F</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">G</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">H</p><p class="glyph-name">exclam</p></li>
+    </ul>
+    <ul>
+      <li><p class="glyph">I</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">J</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">K</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">L</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">M</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">N</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">O</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">P</p><p class="glyph-name">exclam</p></li>
+    </ul>
+    <ul>
+      <li><p class="glyph">¼</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">½</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">¾</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">Ǆ</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">ǆ</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">Ǿ</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">Ȏ</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">Ȗ</p><p class="glyph-name">exclam</p></li>
+    </ul>
+    <ul>
+      <li><p class="glyph">‰</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">₦</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">₧</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">₩</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">₫</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">€</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">₭</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">№</p><p class="glyph-name">exclam</p></li>
+    </ul>
+    <ul>
+      <li><p class="glyph">™</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">←</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">↑</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">→</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">↓</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">↖</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">↗</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">↘</p><p class="glyph-name">exclam</p></li>
+    </ul>
+    <ul>
+      <li><p class="glyph">↙</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">−</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">/</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">≈</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">≤</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">≥</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">{</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">}</p><p class="glyph-name">exclam</p></li>
+    </ul>
+    <ul>
+      <li><p class="glyph">☆</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">☹</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">☺</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">♡</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">✂</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">🍕</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">🍷</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">🎱</p><p class="glyph-name">exclam</p></li>
+    </ul>
+    <ul>
+      <li><p class="glyph">🎳</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">🎵</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">👞</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">📷</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">🔑</p><p class="glyph-name">exclam</p></li>
+      <li><p class="glyph">♡</p><p class="glyph-name">exclam</p></li>
+      <li class="download"><a href="#"><p>↓<br>Full Glyphs PDF</p></a></li>  
+    </ul>
+    
+  </section>
   <section class="tester clearfix">
     <div class="ibeam">
       <img src="assets/ibeam.svg">
