--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
     <div class="col-half">
       <div class="prosperity sign">
         <span class="inner">
-          <p class="xs">PROSPERITY</p>
-          <p class="xs">DUMPLING</p>
+          <p class="xs">
+            PROSPERITY<br>
+            ☆&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;♡<br>
+            DUMPLING
+          </p>
         </span>
         </span>
       </div>
