--- a/index.html
+++ b/index.html
@@ -79,9 +79,24 @@
       <div class="prosperity sign">
         <span class="inner">
           <p class="xs">
-            PROSPERITY<br>
-            ☆&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;♡<br>
-            DUMPLING
+            <span class="arc-1">P</span>
+            <span class="arc-2">R</span>
+            <span class="arc-3">O</span>
+            <span class="arc-4">S</span>
+            <span class="arc-5">P</span>
+            <span class="arc-6">E</span>
+            <span class="arc-7">R</span>
+            <span class="arc-8">I</span>
+            <span class="arc-9">T</span>
+            <span class="arc-10">Y</span>
+            <span class="arc-11">D</span>
+            <span class="arc-12">U</span>
+            <span class="arc-13">M</span>
+            <span class="arc-14">P</span>
+            <span class="arc-15">L</span>
+            <span class="arc-16">I</span>
+            <span class="arc-17">N</span>
+            <span class="arc-18">G</span>
           </p>
         </span>
         </span>
