prosperity dumpling completion

--- a/index.html
+++ b/index.html
@@ -79,26 +79,18 @@
       <div class="prosperity sign">
         <span class="inner">
           <p class="xs">
-            <span class="arc-1">P</span>
-            <span class="arc-2">R</span>
-            <span class="arc-3">O</span>
-            <span class="arc-4">S</span>
-            <span class="arc-5">P</span>
-            <span class="arc-6">E</span>
-            <span class="arc-7">R</span>
-            <span class="arc-8">I</span>
-            <span class="arc-9">T</span>
-            <span class="arc-10">Y</span>
-            <span class="arc-11">D</span>
-            <span class="arc-12">U</span>
-            <span class="arc-13">M</span>
-            <span class="arc-14">P</span>
-            <span class="arc-15">L</span>
-            <span class="arc-16">I</span>
-            <span class="arc-17">N</span>
-            <span class="arc-18">G</span>
+            <span class="path-1">P</span><span class="path-2">R</span><span class="path-3">O</span><span class="path-4">S</span><span class="path-5">P</span><span class="path-6">E</span><span class="path-7">R</span><span class="path-8">I</span><span class="path-9">T</span><span class="path-10">Y</span>
           </p>
-        </span>
+          <p class="xs">
+            <span class="path-11">D</span><span class="path-12">U</span><span class="path-13">M</span><span class="path-14">P</span><span class="path-15">L</span><span class="path-16">I</span><span class="path-17">N</span><span class="path-18">G</span>
+          </p>
+          <p class="xs">
+            <span class="symbols">☆</span>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <span class="symbols line">–—––</span>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <span class="symbols">♡</span>
+          </p>
         </span>
       </div>
       <div class="col-hopkee">
