bower savings update

--- a/index.html
+++ b/index.html
@@ -319,30 +319,11 @@
         </div>
       </div>
       <div class="bowery-savings sign">
-        <div class="arc">
+        <span class="inner">
           <p class="s bowery">
-            <span class="arc-1">T</span>
-            <span class="arc-2">H</span>
-            <span class="arc-3">E</span>
-            <span class="arc-4">B</span>
-            <span class="arc-5">O</span>
-            <span class="arc-6">W</span>
-            <span class="arc-7">E</span>
-            <span class="arc-8">R</span>
-            <span class="arc-9">Y</span>
-            <span class="arc-10">S</span>
-            <span class="arc-11">A</span>
-            <span class="arc-12">V</span>
-            <span class="arc-13">I</span>
-            <span class="arc-14">N</span>
-            <span class="arc-15">G</span>
-            <span class="arc-16">S</span>
-            <span class="arc-17">B</span>
-            <span class="arc-18">A</span>
-            <span class="arc-19">N</span>
-            <span class="arc-20">K</span>
+            <span class="arc-1">T</span><span class="arc-2">H</span><span class="arc-3">E</span><span class="arc-4">B</span><span class="arc-5">O</span><span class="arc-6">W</span><span class="arc-7">E</span><span class="arc-8">R</span><span class="arc-9">Y</span><span class="arc-10">S</span><span class="arc-11">A</span><span class="arc-12">V</span><span class="arc-13">I</span><span class="arc-14">N</span><span class="arc-15">G</span><span class="arc-16">S</span><span class="arc-17">B</span><span class="arc-18">A</span><span class="arc-19">N</span><span class="arc-20">K</span>
           </p> 
-        </div>
+        </span>
         <span class="inner">
           <p class="m save">TO <br>SERVE <br>THOSE WHO <br>SAVE</p>
         </span>
