--- a/index.html
+++ b/index.html
@@ -761,8 +761,8 @@
       </div>
       <div class="detail">
         <ul>
-          <li>→ <a href="https://fonts.google.com/" target="_blank" class="google-fonts">Google Fonts</a></li>
-          <li>→ <a href="https://github.com/andyclymer/Tilt-Typeface" target="_blank" class="github">GitHub</a></li>
+          <li><a href="https://fonts.google.com/" target="_blank" class="google-fonts">Google Fonts</a> ↗</li>
+          <li><a href="https://github.com/andyclymer/Tilt-Typeface" target="_blank" class="github">GitHub</a> ↗</li>
         </ul>
         <p class="people">
           Type Design by<br>
