adjusts to scroller, playing with tester

--- a/index.html
+++ b/index.html
@@ -328,13 +328,13 @@
       <li><p class="glyph">📷</p><p class="glyph-name neon">exclam</p></li>
       <li><p class="glyph">🔑</p><p class="glyph-name neon">exclam</p></li>
       <li><p class="glyph">♡</p><p class="glyph-name neon">exclam</p></li>
-      <li class="download"><a href="#"><p class="neon">↓<br>Full Glyphs PDF</p></a></li>  
+      <li class="download"><a href="#"><p class="neon">↓<br>Full Glyphs PDF</p></a></li>
     </ul>
-    
+
   </section>
   <section class="tester clearfix">
     <div class="ibeam">
-      <img src="assets/ibeam.svg">
+      <img class="moving" src="assets/ibeam.svg">
     </div>
     <div class="text">
       <div class="slider-wrapper hrot">
@@ -348,7 +348,7 @@
       <input class="string neon" type="text" value="AaBbCcDdEeFfGgHhIiJjKkLlMmOoPpQqRrSsTtUuVvWwXxYyZz"></input>
     </div>
   </section>
-  
+
   <div class="separator"></div>
 
   <section class="signs large-only large prism clearfix">
@@ -386,7 +386,7 @@
         <span class="inner">
           <p class="s bowery">
             <span class="arc-1">T</span><span class="arc-2">H</span><span class="arc-3">E</span><span class="arc-4">B</span><span class="arc-5">O</span><span class="arc-6">W</span><span class="arc-7">E</span><span class="arc-8">R</span><span class="arc-9">Y</span><span class="arc-10">S</span><span class="arc-11">A</span><span class="arc-12">V</span><span class="arc-13">I</span><span class="arc-14">N</span><span class="arc-15">G</span><span class="arc-16">S</span><span class="arc-17">B</span><span class="arc-18">A</span><span class="arc-19">N</span><span class="arc-20">K</span>
-          </p> 
+          </p>
         </span>
         <span class="inner">
           <p class="m save">TO <br>SERVE <br>THOSE WHO <br>SAVE</p>
@@ -449,7 +449,7 @@
       <span class="inner">
         <p class="s bowery">
           <span class="arc-1">T</span><span class="arc-2">H</span><span class="arc-3">E</span><span class="arc-4">B</span><span class="arc-5">O</span><span class="arc-6">W</span><span class="arc-7">E</span><span class="arc-8">R</span><span class="arc-9">Y</span><span class="arc-10">S</span><span class="arc-11">A</span><span class="arc-12">V</span><span class="arc-13">I</span><span class="arc-14">N</span><span class="arc-15">G</span><span class="arc-16">S</span><span class="arc-17">B</span><span class="arc-18">A</span><span class="arc-19">N</span><span class="arc-20">K</span>
-        </p> 
+        </p>
       </span>
       <span class="inner">
         <p class="m save">TO <br>SERVE <br>THOSE WHO <br>SAVE</p>
@@ -602,9 +602,9 @@
       <li><p class="glyph">Ò</p><p class="glyph-name neon">exclam</p></li>
       <li><p class="glyph">Â</p><p class="glyph-name neon">exclam</p></li>
       <li><p class="glyph">˜</p><p class="glyph-name neon">exclam</p></li>
-      <li class="download"><a href="#"><p class="neon">↓<br>Full Glyphs PDF</p></a></li>  
+      <li class="download"><a href="#"><p class="neon">↓<br>Full Glyphs PDF</p></a></li>
     </ul>
-    
+
   </section>
   <section class="tester clearfix">
     <div class="ibeam">
@@ -878,7 +878,7 @@
       <li><p class="glyph">Ò</p><p class="glyph-name neon">exclam</p></li>
       <li><p class="glyph">Â</p><p class="glyph-name neon">exclam</p></li>
       <li><p class="glyph">˜</p><p class="glyph-name neon">exclam</p></li>
-      <li class="download"><a href="#"><p class="neon">↓<br>Full Glyphs PDF</p></a></li>  
+      <li class="download"><a href="#"><p class="neon">↓<br>Full Glyphs PDF</p></a></li>
     </ul>
   </section>
   <section class="tester clearfix">
